client/src/App.css
.LoginJumbotron {
  background-color: #007BFF !important;
}

.m-1 {
  background-color: black;
}

.intro {
  text-align: center;
  font-family: 'Alata', sans-serif;
  font-size-adjust: initial;
  text-decoration-color: white;
}

h1.pageHeader {
  margin: 2px;
  color: aliceblue;
  font-size: 50px;
  
}

.insurance {
  text-align: center;
  color: white;
  font-family: 'Playfair Display', serif;
  font-size: 55px;
  background-color: #007BFF !important;
}

footer {
  text-align-last: center;
  font-family: 'Playfair Display', serif;
}

.LoginJumbotron.container-fluid {
  padding-right: 0;
  padding-left: 0;
}

.cardsHome {
  height: 150px;
  width: 150px;
  background: #007bff42;
  border-radius: 30px;
  display: flex;
}

.insurancecard {
  height: 75vh;
  background: #007bff4d;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.carousel {
  width: 900px;
  height: 500px;
  align-items: center;
}

@media (max-width: 800px) {
  .carousel {
    width: auto;
    height: auto;
  }
}

.row {
  display: table;
  margin: 0px, 1px;
  align-self: start;
}


.autoQuote, .lifeQuote, .cycleQuote {
  font-size: 50px;
  font-weight: bold;
  font-family: 'Playfair Display', serif;
  color: white;
  text-align: center;
  float: left;
}

.autoQuote:hover, .homeQuote:hover, .lifeQuote:hover {
  color: #007BFF;
  text-decoration: none;
}
.homeQuote, .boatQuote {
  font-size: 50px;
  font-weight: bold;
  font-family: 'Playfair Display', serif;
  color: white;
  text-align: center;
  float: right;
}

